[package]
name = "tidb-exporter"
version = "7.1.0"
edition = "2021"
authors = ["goalzz85"]
license = "Apache-2.0"
keywords = ["database", "exporter", "tool"]
description = "A tool to export TiDB database data to files in cases where the TiDB server can't be restored."
repository = "https://github.com/goalzz85/tidb-exporter"

[dependencies]
thiserror = "1.0.49"
rocksdb = "0.20.0"
serde = "1.0.156"
serde_json = "1.0.91"
num-traits = "0.2.15"
lazy_static = "1.4.0"
hex = "0.4.3"
smallvec = "1.10.0"
csv = "1.2.1"
chrono = "0.4.24"
flate2 = "1.0.25"
protobuf = { version = "2.8", features = ["bytes"] }
clap = { version = "4.1.*", features = ["derive"] }

tidb_query_datatype = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
tidb_query_common = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
tikv_util = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
collections = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
txn_types =  {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
keys = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
tipb = { git = "https://github.com/pingcap/tipb.git", branch="release-7.1"}
codec = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}

[patch.crates-io]
raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }