[package]
name = "tidb-exporter"
version = "7.1.0"
edition = "2021"
authors = ["goalzz85"]
license = "Apache-2.0"
keywords = ["database", "exporter", "tool"]
description = "A tool to export TiDB database data to files in cases where the TiDB server can't be restored."
repository = "https://github.com/goalzz85/tidb-exporter"

[dependencies]
thiserror = "1.0.49"
rocksdb = "0.20.0"
serde = "1.0.156"
serde_json = "1.0.91"
num-traits = "0.2.15"
lazy_static = "1.4.0"
hex = "0.4.3"
smallvec = "1.10.0"
csv = "1.2.1"
chrono = "0.4.24"
flate2 = "1.0.25"
crossbeam-channel = "0.5.8"
protobuf = { version = "2.8", features = ["bytes"] }
clap = { version = "4.1.*", features = ["derive"] }

futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-timer = "3.0"
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
tidb_query_datatype = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
tidb_query_common = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
tikv_util = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
collections = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
txn_types =  {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
keys = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
tipb = { git = "https://github.com/pingcap/tipb.git"}
kvproto = { git = "https://github.com/pingcap/kvproto.git", branch = "release-7.1" }
codec = {git = "https://github.com/tikv/tikv.git", branch="release-7.1"}
grpcio = { version = "0.10.4", default-features = false, features = ["openssl-vendored", "protobuf-codec", "nightly"] }
grpcio-health = { version = "0.10.4", default-features = false, features = ["protobuf-codec"] }
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
tokio-executor = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }

[patch.crates-io]
raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }